welcome.lessons.welcome.bat.bool1.Close10.scala.error
close10:7: error: type mismatch;
 found   : Unit
 required: Int
	if (compteurA >= compteurB) {
        ^